cambios en el fondo fijo

--- a/TP1/html/consulta_producto.html
+++ b/TP1/html/consulta_producto.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-  <body id="fondo_formulario">
+  <body id="fondo-img-formulario">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
         <div class="container-fluid">
