--- a/TP1/html/contacto.html
+++ b/TP1/html/contacto.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-    <body>
+    <body id="fondo-img-contacto" class="fondo-fijo">
       <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
           <div class="container-fluid">
@@ -38,8 +38,6 @@
           </div>
         </nav>
       </header>
-      <section id="fondo-img-contacto" class="fondo-movil">
-      </section>
       <section id="content-info-contacto">
         <div id="container-contacto">
           <h3>Contacto</h3>
