--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-  <body>
+  <body id="fondo-img-index" class="fondo-fijo">
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
         <div class="container-fluid">
@@ -38,8 +38,6 @@
         </div>
       </nav>
     </header>
-    <section id="fondo-img-index" class="fondo-movil">
-    </section>
     <section id="container-presentacion-index">
       <div>
         <div id="bienvenida" class="container-md presentacion">
