--- a/TP1/html/productos.html
+++ b/TP1/html/productos.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-  <body>
+  <body id="fondo-img-productos" class="fondo-fijo">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
         <div class="container-fluid">
@@ -38,8 +38,6 @@
         </div>
         </nav>
     </header>
-    <section id="fondo-img-productos" class="fondo-movil">
-    </section>
     <section id="productos">
       <div id="content-fabricados">
         <div class="card mb-3 card-flex">
