eliminacion de codigo inesezario y cambios en tamaño de container

--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -11,7 +11,7 @@
   <body id="fondo-img-index" class="fondo-fijo">
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
-        <div class="container-fluid">
+        <div class="container-xxl">
           <a class="navbar-brand" href="presentacion.html"><h2>Maderos S.A.</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
         </div>
       </div>
     </section>
-    <footer>
+    <footer class="container-fluid">
       <div class="row" id="content-footer">
         <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="card text-center">
