--- a/TP1/html/consulta_producto.html
+++ b/TP1/html/consulta_producto.html
@@ -10,7 +10,7 @@
   </head>
   <body id="fondo-img-formulario">
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+      <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="presentacion.html"><h2>Maderos S.A.</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
         </form>
       </div>
     </section>
-    <footer>
+    <footer class="container-fluid">
       <div class="row" id="content-footer">
         <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="card text-center">
