--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pagina comercial de Maderos S.A">
+    <meta name="keywords" content="Madera, Empresa, Maderos, Tablas">
+    <meta name="author" content="Desarrollador">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/my_style.css">
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
