solved desplazamiento de footer por height de pagina muy grande

--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-  <body id="fondo-img-index" class="fondo-fijo">
+  <body id="fondo-img-index" class="fondo-fijo d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
         <div class="container-xxl">
@@ -41,7 +41,7 @@
         </div>
       </nav>
     </header>
-    <section id="container-presentacion-index">
+    <section id="container-presentacion-index" class="flex-grow-1">
       <div>
         <div id="bienvenida" class="container-md presentacion">
           <h3>Bienvenidos a Maderos S.A.</h3>
@@ -66,12 +66,16 @@
     </section>
     <footer class="container-fluid">
       <div class="row" id="content-footer">
-        <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card text-center">
-            <div class="card-header">
+        <!-- <div class="col-sm-6 mb-3 mb-sm-0"> -->
+        <div class="col-sm-6">
+          <!-- <div class="card text-center"> -->
+          <div class="text-center">
+            <!--<div class="card-header">-->
+            <div>
               <h5>Nuestras redes</h5>
             </div>
-            <div class="card-body">
+            <!-- <div class="card-body"> -->
+            <div>
               <div id="redes-footer">
                 <ul class="list-inline">
                   <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Instagram</a></li>
@@ -83,12 +87,16 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card text-center">
-            <div class="card-header">
+        <!-- <div class="col-sm-6 mb-3 mb-sm-0"> -->
+        <div class="col-sm-6 ">
+          <!-- <div class="card text-center"> -->
+          <div class="text-center">
+            <!-- <div class="card-header"> -->
+            <div>
               <h4>Maderos S.A.</h4>
             </div>
-            <div class="card-body center">
+            <!-- <div class="card-body center"> -->
+            <div>
               <div class="redes">
                 <a href="../html/contacto.html" class="btn btn-outline-dark">Contacto</a>
               </div>
