cambios en footer, correcion de container-md faltantes y cambio en container-fluid del navbar a xxl

--- a/TP1/html/consulta_producto.html
+++ b/TP1/html/consulta_producto.html
@@ -11,10 +11,10 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-  <body id="fondo-img-formulario">
+  <body id="fondo-img-formulario" class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
-        <div class="container-fluid">
+        <div class="container-xxl">
           <a class="navbar-brand" href="presentacion.html"><h2>Maderos S.A.</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,8 +41,8 @@
         </div>
         </nav>
     </header>
-    <section class="container">
-      <div id="div-consulta">
+    <section class="flex-grow-1">
+      <div id="div-consulta" class="container-md">
         <h3>Formulario para realizar consultas o pedidos con respecto a nuestros productos</h3>
         <form id="form-consulta" action="#" method="post">
           <div class="mb-3">
@@ -72,11 +72,11 @@
     <footer class="container-fluid">
       <div class="row" id="content-footer">
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card text-center">
-            <div class="card-header">
+          <div class="text-center">
+            <div class="m-2">
               <h5>Nuestras redes</h5>
             </div>
-            <div class="card-body">
+            <div class="m-4">
               <div id="redes-footer">
                 <ul class="list-inline">
                   <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Instagram</a></li>
@@ -89,11 +89,11 @@
           </div>
         </div>
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card text-center">
-            <div class="card-header">
+          <div class="text-center">
+            <div class="m-2">
               <h4>Maderos S.A.</h4>
             </div>
-            <div class="card-body center">
+            <div class="m-4">
               <div class="redes">
                 <a href="../html/contacto.html" class="btn btn-outline-dark">Contacto</a>
               </div>
