--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -66,16 +66,12 @@
     </section>
     <footer class="container-fluid">
       <div class="row" id="content-footer">
-        <!-- <div class="col-sm-6 mb-3 mb-sm-0"> -->
-        <div class="col-sm-6">
-          <!-- <div class="card text-center"> -->
+        <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="text-center">
-            <!--<div class="card-header">-->
-            <div>
+            <div class="m-2">
               <h5>Nuestras redes</h5>
             </div>
-            <!-- <div class="card-body"> -->
-            <div>
+            <div class="m-4">
               <div id="redes-footer">
                 <ul class="list-inline">
                   <li class="list-inline-item"><a href="#" class="btn btn-outline-dark redes-footer">Instagram</a></li>
@@ -87,16 +83,12 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-sm-6 mb-3 mb-sm-0"> -->
-        <div class="col-sm-6 ">
-          <!-- <div class="card text-center"> -->
+        <div class="col-sm-6 mb-3 mb-sm-0">
           <div class="text-center">
-            <!-- <div class="card-header"> -->
-            <div>
+            <div class="m-2">
               <h4>Maderos S.A.</h4>
             </div>
-            <!-- <div class="card-body center"> -->
-            <div>
+            <div class="m-4">
               <div class="redes">
                 <a href="../html/contacto.html" class="btn btn-outline-dark">Contacto</a>
               </div>
