--- a/TP1/html/productos.html
+++ b/TP1/html/productos.html
@@ -160,8 +160,67 @@
             </div>
           </div>
         </div>
+        <div id="demo"></div> 
       </div>
     </footer>
+    <script>
+      ObtenerJsonYConstruirHTML('../json/productos.json', 'content-fabricados');
+      async function ObtenerJsonYConstruirHTML(url, id_element_padre){
+        const element_padre = document.getElementById(id_element_padre);
+        const init ={method: 'GET',
+                  headers: {
+                    'Content-type':'application/json'
+                  },
+                  mode:'cors',
+                  cache:'default'};
+        fetch(url, init)
+              .then(respuesta=> {
+                if (!respuesta.ok) {
+                  throw new Error(`HTTP error! Estado: ${respuesta.status}`);
+                }
+                return respuesta.json();
+              })
+              .then(data => {
+                const productos = data; 
+                console.log(productos[0].title);
+                // let div1 = document.createElement('div');
+                // div1.setAttribute('class','row g-0');
+                // let div2 = document.createElement('div');
+                // div1.setAttribute('class','card mb-3 card-flex');
+                // let div3 = document.createElement('div');
+                // div3.setAttribute('class','row g-0');
+                // let div4 = document.createElement('div');
+                // div4.setAttribute('class','col-md-4');
+                // let img = document.createElement('img');
+                // img.setAttribute('class', 'img-fluid rounded-start');
+                // img.setAttribute('src',productos[0].imagen);
+                // img.setAttribute('alt',productos[0].title);
+                // let div5 = document.createElement('div');
+                // div5.setAttribute('class', 'col-md-8');
+                let prueva;
+                for (const element of productos){
+                  let tag1 = `<div class="card mb-3 card-flex">
+                            <div class="row g-0">
+                            <div class="col-md-4">`;
+                  let tag2 = '<img src="'+element.imagen+'" class="img-fluid rounded-start" alt="'+productos[0].title+'">'
+                  let tag3 = `</div>
+                              <div class="col-md-8">
+                              <div class="card-body">`;
+                  let tag4 = '<h5 class="card-title">'+element.title+'</h5>';
+                  let tag5 = '<p class="card-text">'+element.decripcion+'</p>';
+                  let tag6 = '<p class="card-text">'+element.formaDisponible+'</p>';
+                  let tag7 = `</div></div></div></div>`;
+
+                  prueva = tag1+tag2+tag3+tag4+tag5+tag6+tag7 + prueva;
+                }
+                
+                document.getElementById(id_element_padre).innerHTML = prueva;
+                })
+              .catch(function(error) {
+                console.log(error);
+              });
+      }
+    </script>
   </body>
   <script src="../js/bootstrap.js"></script>
 </html>
