Carga de productos desde json y correcion de errores de css

--- a/TP1/html/consulta_producto.html
+++ b/TP1/html/consulta_producto.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="../img/icon/favicon.ico">
     <title>Maderos S.A.</title>
   </head>
-  <body id="fondo-img-formulario" class="d-flex flex-column min-vh-100">
+  <body id="fondo-img-formulario" class="fondo-fijo d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary" id="navbar">
         <div class="container-xxl">
