--- a/TP1/html/index.html
+++ b/TP1/html/index.html
@@ -42,7 +42,7 @@
       </nav>
     </header>
     <section id="container-presentacion-index" class="flex-grow-1">
-      <div>
+      <div class="container-md">
         <div id="bienvenida" class="container-md presentacion">
           <h3>Bienvenidos a Maderos S.A.</h3>
         </div>
